--- a/.env
+++ b/.env
@@ -5,8 +5,9 @@ VITE_NAVER_MAP_CLIENT_SECRET=GUrRsMZWkB3TTp9TNAAhKuokM7Mp0yRcKgHgdxf
 # Google Maps API Key (선택사항)
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
-# Backend API URL
+# Backend API URLs
 VITE_API_BASE_URL=http://localhost:8081
+VITE_AI_API_BASE_URL=http://localhost:8001
 
 # OAuth 설정
 VITE_OAUTH_REDIRECT_URI=http://localhost:5173/auth/callback
